# viralsweeper

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/resources/: cell.ui  main.ui  resources.xml
